##########################################################################
# If not stated otherwise in this file or this component's Licenses.txt
# file the following copyright and licenses apply:
#
# Copyright 2016 RDK Management
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##########################################################################
SUBDIRS =
DIST_SUBDIRS =

distcleancheck_listfiles = *-libtool

bin_PROGRAMS = tenableHDCP
tenableHDCP_SOURCES = tenableHDCP.cpp

-include ${PKG_CONFIG_SYSROOT_DIR}/usr/include/platform_app.inc
AM_CXXFLAGS = -g -fPIC -D_REENTRANT -Wall \
	-I=/${includedir}/rdk/ds \
	-I=/${includedir}/rdk/ds-hal \
	-I=/${includedir}/rdk/ds-rpc \
	-I=/${includedir}/rdk/iarmbus \
	-I=/${includedir}/rdk/iarmmgrs/mfr \
	-I=/${includedir}/rdk//iarmmgrs-hal

tenableHDCP_LDADD = -lds -ldshalcli -lIARMBus -lglib-2.0 -ldbus-1
